# PRTS

./: .gitmodules  CMakeLists.txt  README.md
tasks/: CMakeLists.txt
tasks/task1/: CMakeLists.txt
tasks/task1/include/task1/: trax_packet.hpp
tasks/task1/src/: trax_packet.cpp
tasks/task1/test/: main.cpp
tasks/task2/: CMakeLists.txt
tasks/task2/include/task2/: list.hpp
tasks/task2/test/: main.cpp
tasks/task3/: CMakeLists.txt
tasks/task3/include/task3/: depth_type.hpp  mission.hpp  mission_cli.hpp  mission_context.hpp  mission_storage.hpp  movement_type.hpp  pose.hpp  state.hpp
tasks/task3/src/: depth_type.cpp  main.cpp  mission.cpp  mission_cli.cpp  mission_context.cpp  mission_storage.cpp  movement_type.cpp  state.cpp
